infrastructure/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curs-flask
  namespace: default
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app: curs-flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
