infrastructure/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curs-valutar-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: exchange.istartit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: curs-valutar
                port:
                  number: 80
